# d2tweaks

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  launch.vs.json
include/: client.h  common.h  d2common.h  d2function.h  loader.h  server.h
include/common/: asm_code.h  config.h  d2common.h  d2function.h  d2protocol.h  enum_helper.h  hooking.h  ptr_wrapper.h  string_utils.h
include/d2tweaks/client/: client.h
include/d2tweaks/client/modules/: client_module.h
include/d2tweaks/client/modules/auto_gold_pickup/: auto_gold_pickup.h
include/d2tweaks/client/modules/autosort/: autosort.h
include/d2tweaks/client/modules/damage_display/: damage_display.h
include/d2tweaks/client/modules/item_move/: item_move.h
include/d2tweaks/client/modules/loot_filter/: loot_filter.h  loot_filter_settings.h  loot_filter_settings_menu.h  loot_filter_settings_toggle_menu.h
include/d2tweaks/client/modules/small_patches/: small_patches.h
include/d2tweaks/client/modules/test/: test.h
include/d2tweaks/common/: asset.h  asset_manager.h  common.h  protocol.h
include/d2tweaks/server/: server.h
include/d2tweaks/server/modules/: server_module.h
include/d2tweaks/server/modules/auto_gold_pickup/: auto_gold_pickup.h
include/d2tweaks/server/modules/autosort/: autosort.h
include/d2tweaks/server/modules/damage_display/: damage_display.h
include/d2tweaks/server/modules/identify_on_pickup/: identify_on_pickup.h
include/d2tweaks/server/modules/item_move/: item_move.h
include/d2tweaks/server/modules/test/: test.h
include/d2tweaks/ui/: menu.h  rect.h  ui_manager.h
include/d2tweaks/ui/controls/: button.h  checkbox.h  control.h  group.h  image.h  label.h
include/diablo2/: d2client.h  d2cmp.h  d2common.h  d2game.h  d2gfx.h  d2launch.h  d2net.h  d2win.h  fog.h  storm.h
include/diablo2/structures/: act_map.h  cellfile.h  client_unit_list.h  damage.h  data_tables.h  file_handle.h  game.h  game_server.h  gfxcell.h  gfxdata.h  inventory.h  item_data.h  items_line.h  linkage.h  monstats_line.h  monster_data.h  net_client.h  object_data.h  path.h  player_data.h  room.h  unit.h
include/diablo2/structures/data/: bodylocs_line.h  elemtypes_line.h  hitclass_line.h  item_types_line.h  monmode_line.h  playerclass_line.h  properties_line.h  storepage_line.h
include/diablo2/utils/: mpq_ifstream.h  screen.h
include/fw/: pool.h  singleton.h
resources/d2tweaks/assets/: buttons.dc6
resources/d2tweaks/interfaces/: autosort.xml  loot_filter_settings.xml  loot_filter_settings_menu.xml  loot_filter_settings_toggle.xml  loot_filter_settings_toggle_menu.xml
src/: client.cpp  common.cpp  main.cpp  server.cpp
src/common/: asm_code.cpp  config.cpp  hooking.cpp  string_utils.cpp
src/d2tweaks/client/: client.cpp
src/d2tweaks/client/modules/: client_module.cpp
src/d2tweaks/client/modules/auto_gold_pickup/: auto_gold_pickup.cpp
src/d2tweaks/client/modules/autosort/: autosort.cpp
src/d2tweaks/client/modules/damage_display/: damage_display.cpp
src/d2tweaks/common/: asset_manager.cpp  common.cpp
src/d2tweaks/server/: server.cpp
src/d2tweaks/server/modules/: server_module.cpp
src/d2tweaks/ui/: menu.cpp  ui_manager.cpp
src/d2tweaks/ui/controls/: button.cpp  checkbox.cpp  group.cpp  image.cpp  label.cpp
src/diablo2/: d2client.cpp  d2cmp.cpp  d2common.cpp  d2game.cpp  d2gfx.cpp  d2launch.cpp  d2net.cpp  d2win.cpp  fog.cpp  storm.cpp
src/diablo2/utils/: mpq_ifstream.cpp  screen.cpp
(+13 files in other folders)
